# synacore

./: .challenge.bin.swp  CMakeLists.txt  arch-spec  bf.go  main.cpp  math  memory.cpp  memory.h  registers.cpp  registers.h  synacor-challenge.tgz  validate.php  vm.cpp  vm.go  vm.h
OpCodes/: ops.go
convert/: asm.txt  opCodeToAsm.go
log/: log.go
memory/: memory.go
register/: register.go
